logs/node.py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/nodepy_modules'...
Listing './lib/python3.5/nodepy_modules/@nodepy'...
Listing './lib/python3.5/nodepy_modules/@nodepy/nppm'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/bootstrap.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/bootstrap.py", line 34
    import brewfix from './lib/brewfix'
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/index.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/index.py", line 36
    import manifest from './lib/manifest'
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/nodepy_modules/@nodepy/nppm/lib'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/argschema.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/brewfix.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/brewfix.py", line 35
    import { is_virtualenv } from './env'
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/config.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/env.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/install.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/install.py", line 39
    import _registry from './registry'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/logger.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/manifest.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/manifest.py", line 27
    import semver from './semver'
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/package-lifecycle.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/package-lifecycle.py", line 38
    import config from './config'
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/refstring.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/refstring.py", line 24
    import argschema from './argschema'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/registry.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/registry.py", line 34
    import argschema from './argschema'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/semver.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/semver_test.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/semver_test.py", line 22
    import { Version, Selector } from './semver'
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/util'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/util/download.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/util/json.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/util/pathutils.py'...
Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/util/script.py'...
***   File "./lib/python3.5/nodepy_modules/@nodepy/nppm/lib/util/script.py", line 32
    import argschema from '../argschema'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/nodepy_modules/@nodepy/nppm/lib/util/text.py'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/distlib'...
Listing './lib/python3.5/site-packages/distlib/_backport'...
Listing './lib/python3.5/site-packages/distlib-0.2.6.dist-info'...
Listing './lib/python3.5/site-packages/hammock-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/localimport-1.5.2.egg-info'...
Listing './lib/python3.5/site-packages/node.py-0.0.22.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
